--- a/bs/bootstrap.html
+++ b/bs/bootstrap.html
@@ -147,7 +147,7 @@
     <!--Ninth Row-->
     <div class="row">
       <!--First and Only Column in this Row-->
-      <div class="col">
+      <div class="col-md-12">
         <h1>Using Bootstrap doesn't mean we're never writing CSS again.</h1>
         <h1>But we can build websites much faster without having to write <strong><i>ALL</i></strong> of the CSS ourselves.</h1>
       </div>
