--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="google-site-verification" content="uxQ13UkSIpjMntiHpntJ_87zorxduHbFX5AwwzcXLGw" />
 <link rel="stylesheet" href="css/nahuy.css" type="text/css">
 <link rel="SHORTCUT ICON" href="favicon.ico">
-<title>Huy A. Nguyen - Wireless System Research Group</title>
+<title>Huy Nguyen - Wireless System Research Group</title>
 </head><body>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> 
 </script> 
@@ -15,7 +15,7 @@ urchinTracker();
 <table summary="Table for page layout." id="tlayout">
 <tbody><tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Huy A. Nguyen</div>
+<div class="menu-category">Huy Nguyen</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="papers.html">Publications</a></div>
@@ -29,12 +29,12 @@ urchinTracker();
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Huy A. Nguyen</h1>
+<h1>Huy Nguyen</h1>
 </div>
 <table class="imgtable"><tbody><tr><td>
-<img src="img/huyna.jpg" alt="Huy A. Nguyen photo">&nbsp;</td>
+<img src="img/huyna.jpg" alt="Huy Nguyen photo">&nbsp;</td>
 <td align="left">
-<p><a href="http://www2.cs.uh.edu/~nahuy/">Huy A. Nguyen</a>
+<p><a href="http://www2.cs.uh.edu/~nahuy/">Huy Nguyen</a>
 <!--(<a href="http://www.vietnam.com/"><img src="img/vietnam.gif" /></a>)-->
 <br>
 Ph.D., <a href="http://wireless.cs.uh.edu/">Wireless System Research Group</a>,<br>
@@ -43,7 +43,7 @@ Ph.D., <a href="http://wireless.cs.uh.edu/">Wireless System Research Group</a>,<
 Advisor: <a href="http://www.cas.mcmaster.ca/~rzheng/">Professor Rong Zheng</a><br><br>
 <!--<img src="http://www2.cs.uh.edu/~rzheng/images/new.gif" alt="New">-->
 <font size="3" color="red">I graduated and was honored with the Best Ph.D. Award from the CS department at UoH.<br>
-Afterwards, I jump to oil and gas industry and am working as a Sr. Developer at <a href="http://www.ihs.com/">IHS Inc.</a></font><br>
+Currently I am working as a Sr. Software Developer at <a href="http://www.ihs.com/">IHS Inc.</a></font><br>
 <b>[<a href="http://www2.cs.uh.edu/~nahuy/resume_huy_nguyen_full.pdf">My resume</a>] [<a href="http://scholar.google.com/citations?hl=en&user=lk5kgzcAAAAJ">Google Scholar</a>]</b>
 </td></tr></tbody></table>
 
