--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="css/nahuy.css" type="text/css">
 <link rel="SHORTCUT ICON" href="favicon.ico">
-<title>Huy A. Nguyen Research Projects</title>
+<title>Huy Nguyen Research Projects</title>
 </head><body>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> 
 </script> 
@@ -14,7 +14,7 @@ urchinTracker();
 <table summary="Table for page layout." id="tlayout">
 <tbody><tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Huy A. Nguyen</div>
+<div class="menu-category">Huy Nguyen</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="papers.html">Publications</a></div>
@@ -28,7 +28,7 @@ urchinTracker();
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Huy A. Nguyen &ndash; Research/Miscellaneous Projects</h1>
+<h1>Huy Nguyen &ndash; Research/Miscellaneous Projects</h1>
 <div id="subtitle"><a href="http://wireless.cs.uh.edu/">Wireless System Research Group</a>,
 <a href="http://www.cs.uh.edu/">Department of Computer Science</a>,
 <a href="http://www.uh.edu/">University of Houston</a></div> 
@@ -38,8 +38,8 @@ urchinTracker();
 <br>
 <table width="800">
 	<tr width="100%" align="center">
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/SIP/SIP.png" alt="SIP system overview" width="350"/></td>
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/SIP/cloaking.png" alt="SIP cloaking mechanism" width="350"/></td>
+		<td><img src="projects/SIP/SIP.png" alt="SIP system overview" width="350"/></td>
+		<td><img src="projects/SIP/cloaking.png" alt="SIP cloaking mechanism" width="350"/></td>
 	</tr>
 	<tr><td colspan="2" align="justify">
 <br>
@@ -56,9 +56,9 @@ service. We evaluate the usability of the service in presence of
 our anonymizer framework.
 		</p>
 		<p>
-			<a href="http://www2.cs.uh.edu/~nahuy/projects/SIP/SIP.pdf">Final project report</a><br>
-			<a href="http://www2.cs.uh.edu/~nahuy/projects/SIP/SIP.pptx">Presentation slides</a><br>
-			<a href="http://www2.cs.uh.edu/~nahuy/data/SIPmovie.wmv">Demo video</a>
+			<a href="projects/SIP/SIP.pdf">Final project report</a><br>
+			<a href="projects/SIP/SIP.pptx">Presentation slides</a><br>
+			<a href="data/SIPmovie.wmv">Demo video</a>
 		</p>
 	</td></tr>
 </table>
@@ -68,8 +68,8 @@ our anonymizer framework.
 <br>
 <table width="800">
 	<tr width="100%" align="center">
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/IM/social_tag.jpg" alt="Social network" width="350"/></td>
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/IM/viral_marketing.jpg" alt="Viral marketing" width="350"/></td>
+		<td><img src="projects/IM/social_tag.jpg" alt="Social network" width="350"/></td>
+		<td><img src="projects/IM/viral_marketing.jpg" alt="Viral marketing" width="350"/></td>
 	</tr>
 	<tr><td colspan="2" align="justify">
 <br>
@@ -102,8 +102,8 @@ proposed algorithms with moderate computation costs.
 <table width="800">
 	<tr width="100%" valign="top">
 		<td>
-			<img src="http://www2.cs.uh.edu/~nahuy/projects/wireless/wireless.png" alt="Wireless user monitoring" width="250"/><br><br>
-			<img src="http://www2.cs.uh.edu/~nahuy/projects/wireless/1.png" alt="Result 1" width="250"/></td>
+			<img src="projects/wireless/wireless.png" alt="Wireless user monitoring" width="250"/><br><br>
+			<img src="projects/wireless/1.png" alt="Result 1" width="250"/></td>
 		<td width="10px">&nbsp;</td>
 		<td width="100%" align="justify">
 			<p>
@@ -131,8 +131,8 @@ proposed algorithms with moderate computation costs.
 	<tr>
 		<td colspan="3">
 			<p>
-				<a href="http://www2.cs.uh.edu/~nahuy/hoc11o-chhetri.pdf">Mobihoc 2010 paper</a><br>
-				<a href="http://www2.cs.uh.edu/~nahuy/docs/mobihoc10.pdf">Mobihoc 2010 presentation slides</a>
+				<a href="hoc11o-chhetri.pdf">Mobihoc 2010 paper</a><br>
+				<a href="docs/mobihoc10.pdf">Mobihoc 2010 presentation slides</a>
 			</p>
 		</td>
 	</tr>
@@ -143,7 +143,7 @@ proposed algorithms with moderate computation costs.
 <br>
 <table width="800">
 	<tr width="100%" align="center">
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/MTI/MTI.png" alt="SIP system overview" width="450"/></td>
+		<td><img src="projects/MTI/MTI.png" alt="SIP system overview" width="450"/></td>
 	</tr>
 	<tr><td colspan="2" align="justify">
 <br>
@@ -170,7 +170,7 @@ proposed algorithms with moderate computation costs.
 <br>
 <table width="800">
 	<tr width="100%" valign="top">
-		<td><img src="http://www2.cs.uh.edu/~nahuy/projects/web/wiserweb.png" alt="WiSeR website" width="250"/></td>
+		<td><img src="projects/web/wiserweb.png" alt="WiSeR website" width="250"/></td>
 		<td width="10px">&nbsp;</td>
 		<td width="100%" align="justify">
 			<p>Developing websites has been my hobby since I was an undergraduate student.
