--- a/papers.html
+++ b/papers.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="css/nahuy.css" type="text/css">
 <link rel="SHORTCUT ICON" href="favicon.ico">
-<title>Huy A. Nguyen Publication</title>
+<title>Huy Nguyen Publication</title>
 </head><body>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> 
 </script> 
@@ -14,7 +14,7 @@ urchinTracker();
 <table summary="Table for page layout." id="tlayout">
 <tbody><tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Huy A. Nguyen</div>
+<div class="menu-category">Huy Nguyen</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="papers.html" class="current">Publications</a></div>
@@ -28,7 +28,7 @@ urchinTracker();
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Huy A. Nguyen &ndash; Refereed Publications</h1>
+<h1>Huy Nguyen &ndash; Refereed Publications</h1>
 <div id="subtitle"><a href="http://wireless.cs.uh.edu/">Wireless System Research Group</a>,
 <a href="http://www.cs.uh.edu/">Department of Computer Science</a>,
 <a href="http://www.uh.edu/">University of Houston</a></div> 
